--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <h3>Enjoy........ Enjoy........ Enjoy........ Enjoy</h3>
     <h1>Just See</h1>
-    <p>Not moving press one time. like >👆</p>
+    <p>Not moving? <b>Press</b> one time. like >👆</p>
     
     <video id="webCam" autoplay="true">
       <h2> Cdfdf</h2>
